basic/virtual_service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: istio-virtualservice
  namespace: default
spec:
  hosts:
    - "*" # Match all hosts
  gateways:
    - istio-gateway
  http:
    - route:
        - destination:
            host: istio-service
            port:
              number: 80
